--- a/vue-app/package.json
+++ b/vue-app/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@azure/msal-browser": "^2.19.0",
     "@microsoft/microsoft-graph-client": "^3.0.0",
+    "buffer": "^6.0.3",
     "vue": "^3.2.16"
   },
   "devDependencies": {
